{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 57,
  "lineage": "3e18767a-4985-5d6c-ddce-c208c0500300",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-gr",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09e2cd311ad25d690",
            "domain": "vpc",
            "id": "eipalloc-0eec552a8280bd07a",
            "instance": "i-0ee1fdbad4d17c513",
            "network_border_group": "us-east-1",
            "network_interface": "eni-067d8a086d107fa17",
            "private_dns": "ip-10-0-200-243.ec2.internal",
            "private_ip": "10.0.200.243",
            "public_dns": "ec2-54-156-47-91.compute-1.amazonaws.com",
            "public_ip": "54.156.47.91",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.gr-instance",
            "aws_security_group.ec2-sec-group",
            "aws_subnet.gr-subnet-1",
            "aws_vpc.gr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gr-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:192139457125:instance/i-0ee1fdbad4d17c513",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07bd860ef427ff178",
                "volume_size": 1,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee1fdbad4d17c513",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gr_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-067d8a086d107fa17",
            "private_dns": "ip-10-0-200-243.ec2.internal",
            "private_ip": "10.0.200.243",
            "public_ip": "54.156.47.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0972691c09abcd328",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01af4bf1c2649b804",
            "tags": {
              "Name": "gr-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bebc4320515f0fd"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sec-group",
            "aws_subnet.gr-subnet-1",
            "aws_vpc.gr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gr-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192139457125:internet-gateway/igw-099adfb988b488820",
            "id": "igw-099adfb988b488820",
            "owner_id": "192139457125",
            "tags": {
              "Name": "gr-internet-gateway"
            },
            "vpc_id": "vpc-0f44139e5f3d7c31a"
          },
          "dependencies": [
            "aws_vpc.gr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192139457125:route-table/rtb-008c0384b48bc3b7f",
            "id": "rtb-008c0384b48bc3b7f",
            "owner_id": "192139457125",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "GR route table"
            },
            "vpc_id": "vpc-0f44139e5f3d7c31a"
          },
          "dependencies": [
            "aws_vpc.gr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00423966414c6cc63",
            "route_table_id": "rtb-008c0384b48bc3b7f",
            "subnet_id": "subnet-01af4bf1c2649b804"
          },
          "dependencies": [
            "aws_route_table.public_route",
            "aws_subnet.gr-subnet-1",
            "aws_vpc.gr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sec-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192139457125:security-group/sg-05bebc4320515f0fd",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bebc4320515f0fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "GR World",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "GR World",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "GR World",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sec-group",
            "name_prefix": "",
            "owner_id": "192139457125",
            "revoke_rules_on_delete": false,
            "tags": {
              "instance_name": "gr-instance",
              "name": "ec2-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f44139e5f3d7c31a"
          },
          "dependencies": [
            "aws_vpc.gr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gr-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192139457125:subnet/subnet-01af4bf1c2649b804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-01af4bf1c2649b804",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192139457125",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-0f44139e5f3d7c31a"
          },
          "dependencies": [
            "aws_vpc.gr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gr-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192139457125:vpc/vpc-0f44139e5f3d7c31a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09296ef9c68a4f90f",
            "default_route_table_id": "rtb-0201aa7c743e256f6",
            "default_security_group_id": "sg-02402ab482d2c3ee0",
            "dhcp_options_id": "dopt-0fff6ab3bee10e6b1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f44139e5f3d7c31a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0201aa7c743e256f6",
            "owner_id": "192139457125",
            "tags": {
              "Name": "gr-vpc"
            },
            "tags_all": {
              "Name": "gr-vpc"
            }
          }
        }
      ]
    }
  ]
}